--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Pruebas</string>
+    <string name="todo">TODO</string>
+    <string name="title">Encuentra con \n quien divertirte</string>
 </resources>
