se agrega dependencia recicker view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Pruebas</string>
     <string name="todo">TODO</string>
     <string name="title">Encuentra con \n quien divertirte</string>
+    <string name="title2">Bienvenido</string>
     <string name="encuentra_con_quien_divertirte">Encuentra con quien divertirte</string>
     <string name="ya_tienes_una_cuenta_inicia_sesion">¿Ya tienes una cuenta? Inicia Sesion</string>
     <string name="registrate">¡Registrate!</string>
