modificación comunic activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,10 @@
     <string name="todo">TODO</string>
     <string name="title">Encuentra con \n quien divertirte</string>
     <string name="title2">Bienvenido</string>
+    <string name="textView2">Usuario o Correo</string>
+    <string name="textView3">Contraseña</string>
+    <string name="button2">Ingresar</string>
+    <string name="button3">Iniciar Sesión</string>
     <string name="encuentra_con_quien_divertirte">Encuentra con quien divertirte</string>
     <string name="ya_tienes_una_cuenta_inicia_sesion">¿Ya tienes una cuenta? Inicia Sesion</string>
     <string name="registrate">¡Registrate!</string>
